--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "^7.2.2",
     "@ionic-native/contacts": "^5.5.0",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/network": "^5.5.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "@ionic/storage": "^2.2.0",
     "com.razorpay.cordova": "1.4.3",
     "cordova-android": "7.1.4",
     "cordova-browser": "5.0.4",
@@ -32,9 +34,11 @@
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^3.1.2",
+    "cordova-plugin-network-information": "2.0.1",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "3.2.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.29"
@@ -77,7 +81,9 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "com.razorpay.cordova": {},
-      "cordova-plugin-contacts": {}
+      "cordova-plugin-contacts": {},
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-network-information": {}
     },
     "platforms": [
       "android",
